# odin

./: COMMANDS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: odin-publish.yml
docs/: API.md
odin/: COMMANDS.md  cli.py  dataset.py  dataset_classification.py  dataset_detection.py  results.py  start.py  training.py  training_classification.py  training_detection.py
odin_vision/: augmentate_data.py  cleaner.py  cli.py  constants.py  dataset.py  dataset_classification.py  dataset_detection.py  global_cleaner.py  matcher.py  new_data.py  project_utils.py  start.py  training.py  training_classification.py  training_detection.py
odin_vision/api/: pipeline.py
odin_vision/api/chronicle/: chronicle.py  controller.py
odin_vision/api/dataset/: base.py  classification.py  controller.py  detection.py
odin_vision/api/internal/: exceptions.py
odin_vision/api/model/: base.py  classification.py  controller.py  detection.py
odin_vision/api/project/: __init__.py  base.py  classification.py  detection.py
odin_vision/api/typings/: chronicle.py  dataset.py  model.py
odin_vision/chronicle/: utils.py
odin_vision/dataset/: base.py  classification.py  detection.py
odin_vision/model/: base.py  classification.py  detection.py
odin_vision/start/: base.py
test/: project.yaml
test/chronicles/: README.md
test/datasets/dataset_1_obd/: data.yaml
test/weights/: README.md
